cambios en el control de examen , se sube version base

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -186,7 +186,27 @@
           </div>
         </div>
       </div>
+
+      <!-- Tarjeta 2: Ver preguntas -->
+    <div class="col-sm-6 col-md-3 mb-4">
+      <div class="card card-custom">
+        <div class="card-body text-center">
+          <h5 class="card-title">Revisar Examenes</h5>
+          <p class="card-text">
+            Ver Examenes
+          </p>
+          <a href="/ver_total_examenes" class="btn btn-warning">Ver preguntas</a>
+        </div>
+      </div>
     </div>
+   </div>
+
+
+
+    </div>
+
+    
+
     
     <!-- Botones de acciones varias -->
     <a href="{{ url_for('ver_examenes') }}" class="btn btn-success">📄 Ver Exámenes Realizados</a>
